--- a/index.html
+++ b/index.html
@@ -186,7 +186,20 @@
 <!-- finish Gutter-section -->
 
 
-          
+          <!-- Bonous-Section -->
+          <section class="container d-flex rounded-1 mt-5 text-center bg-info p-2">
+            <div class="col-8">
+              <h3 class="text-white fw-bold mt-5">Ready to join?</h3>
+              <p class="text-white text-opacity-15"> <small>It is a long established fact that a reader will be distracted by the <br> readable content of a page when looking at its layout</small></p>
+            </div>
+            <div class="col-4">
+              <div class="text-center mt-5">
+                <a  class="border-white rounded-2 bg-white text-info fw-bold p-3 text-decoration-none" href="">See More Courses </a>
+                 
+              </div>
+            </div>
+          </section>
+          <!-- finish Bonous-section -->
 
 
 
