--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <!-- start Gutter-section -->
         
          <div class="text-center mt-5">
-          <h3 class=" h1 fw-bold">Discover Our Popular <br> Courses </h3>
+          <h3 class="fw-bold">Discover Our Popular <br> Courses </h3>
           <p class="fw-semibold text-opacity-25">It is a long established fact that a reader will be distracted by teh readable <br> content of a page when looking at its layout</p>
       </div>
 
@@ -202,27 +202,113 @@
           <!-- finish Bonous-section -->
 
 
+          <!--Start Accordion question-answer section -->
+          <section class="container">
+            <div class="text-center mt-5">
+              <h3 class="fw-bold">Frequently Asked Questioned</h3>
+              <p class="text-dark text-opacity-15"> <small>It is a long established fact that a reader will be distracted by the <br> readable content of a page when looking at its layout</small></p>
+            </div>
+
+            <div class="accordion mt-5" id="accordionExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Accordion Item #1
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Accordion Item #2
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Accordion Item #3
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Accordion Item #4
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </section>
+          <!--Finish Accordion question-answer section -->
 
 
+          <!--Start Company Bonus mark-section   -->
+          <section class="container mt-5">
+            <div class="text-center">
+              <h2 class="fw-bold">Trusted by over 850+ companies</h2>
+            </div>
 
+            <div class="text-center d-flex align-items-center mt-4 col-lg-12">
 
+             <div class="col-2">
+              <img style="height: 38px;" class="img-fluid " src="./images/company/company-1.png" alt="">
+             </div>
 
+             <div class="col-2">
+              <img style="height: 38px;" class="img-fluid" src="./images/company/company-2.png" alt="">
+             </div>
 
+             <div class="col-2">
+              <img style="height: 38px;" class="img-fluid" src="./images/company/company-3.png" alt="">
+             </div>
 
+             <div class="col-2">
+              <img style="height: 38px;" class="img-fluid" src="./images/company/company-4.png" alt="">
+             </div>
 
+             <div class="col-2">
+              <img style="height: 38px;" class="img-fluid" src="./images/company/company-5.png" alt="">
+             </div>
 
+             <div class="col-2">
+              <img style="height: 38px;" class="img-fluid" src="./images/company/company-6.png" alt="">
+             </div>
 
+              <!-- <img class="img-fluid" src="./images/company/company-2.png" alt="">
+              <img class="img-fluid" src="./images/company/company-3.png" alt="">
+              <img class="img-fluid" src="./images/company/company-4.png" alt="">
+              <img class="img-fluid" src="./images/company/company-5.png" alt="">
+              <img class="img-fluid" src="./images/company/company-6.png" alt=""> -->
+            </div>
+          </section>
+          <!-- Finish Company Bonus mark-section   -->
     </main>
     <!-- end main-section -->
-
-
-
-
-
-
-
-
-
+    
 
 
     <!-- start footer-section -->
