--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>e-Tech learning</title>
+    <!-- start font awesome icon link -->
+    <script src="https://kit.fontawesome.com/3e69ea6516.js" crossorigin="anonymous"></script>
+    <!-- end font awesome icon link -->
 
     <!-- start bootstrap cdn link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -22,7 +25,7 @@
     <header>
         <!-- start nav-bar section -->
         <section class="container">
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="navbar navbar-expand-lg bg-light p-3">
                 <div class="container-fluid">
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -93,14 +96,6 @@
 
         </header>
     <!--- end header-section -->
-
-
-
-
-
-
-
-
 
 
 
@@ -202,6 +197,7 @@
           <!-- finish Bonous-section -->
 
 
+
           <!--Start Accordion question-answer section -->
           <section class="container">
             <div class="text-center mt-5">
@@ -266,8 +262,9 @@
           <!--Finish Accordion question-answer section -->
 
 
+
           <!--Start Company Bonus mark-section   -->
-          <section class="container mt-5">
+          <section class="container mt-5 mb-5">
             <div class="text-center">
               <h2 class="fw-bold">Trusted by over 850+ companies</h2>
             </div>
@@ -297,32 +294,34 @@
              <div class="col-2">
               <img style="height: 38px;" class="img-fluid" src="./images/company/company-6.png" alt="">
              </div>
-
-              <!-- <img class="img-fluid" src="./images/company/company-2.png" alt="">
-              <img class="img-fluid" src="./images/company/company-3.png" alt="">
-              <img class="img-fluid" src="./images/company/company-4.png" alt="">
-              <img class="img-fluid" src="./images/company/company-5.png" alt="">
-              <img class="img-fluid" src="./images/company/company-6.png" alt=""> -->
             </div>
           </section>
-          <!-- Finish Company Bonus mark-section   -->
+    <!-- Finish Company Bonus mark-section   -->
+
+
     </main>
     <!-- end main-section -->
-    
+
 
 
     <!-- start footer-section -->
-    <footer>
+    <footer class="bg-dark p-4">
+
+      <div class="text-center">
+        <h3 class="text-white mt-4 fw-bold">Effect Edu</h3>
+        <p class="text-white"><small>Office 51, Gonobhobon, College Gate Dhaka. <br> Capital of Dhaka</small></p>
+        <p class="mb-3 text-white"><small>Privacy Policy | Terms of Use</small></p>
+      </div>
+
+      <div class="text-center">
+        <a href="https://www.facebook.com"><i class="fa-brands fa-facebook h2 text-white p-2"></i></a>
+        <a href="https://twitter.com/explore"><i class="fa-brands fa-twitter h2 text-white p-2"></i></a>
+        <a href="https://bd.linkedin.com"><i class="fa-brands fa-linkedin-in h2 text-white p-2"></i></a>
+        <a href="https://business.instagram.com"><i class="fa-brands fa-instagram h2 text-white p-2"></i></a>
+      </div>
 
     </footer>
     <!-- end footer-section -->
-
-
-
-
-
-
-
 
 
 
