added student feedback section

--- a/index.html
+++ b/index.html
@@ -324,6 +324,79 @@
 
 
 
+
+          <!--start Feedback-Section -->
+
+          <section class="container mt-5 text-center">
+            <h3 class="text fw-bold">Some Students Feedback</h3>
+            <p class="text-secondary"><small>It is a long established fact that a reader will be distracted by the <br>
+              readable content of a page when looking at its layout.</small></p>
+
+          </section>
+
+          <section class="container mt-2 d-flex gap-2">
+            <div class="card" style="width: 26rem; height: 17rem;">
+              <div class="card-body">
+                <div class="d-flex align-items-center ">
+                  <div>
+                    <img class="img-fluid" src="./images/comma.png" alt="">
+                  </div>
+                <div class="" style="padding-left:14rem">
+                  <i class="text-warning h6  fa-solid fa-star"></i>
+                  <i class="text-warning h6  fa-solid fa-star"></i>
+                  <i class="text-warning h6  fa-solid fa-star"></i>
+                  <i class="text-warning h6  fa-solid fa-star"></i>
+                  <i class="text-warning h6  fa-solid fa-star-half-stroke"></i>
+                </div>
+                </div>
+                <p class="text-secondary mt-3"><small>There are many variations of passages of Lorem Ipsum available, but
+                  the majority have suffered alteration in some form, by injected
+                  humour, or randomised words which don't look even slightly
+                  believable. If you are going to use a passage of Lorem.</small></p>
+                  <div class="d-flex">
+                    <img class="img-fluid p-3 h-25" src="./images/student/student-5.png" alt="">
+                   <div>
+                    <h5>Awlad Hossain</h5>
+                    <p class="text-secondary">UI/UX Designer</p>
+                   </div>
+                  </div>
+              </div>
+            </div>
+
+            <div class="card" style="width: 26rem; height: 17rem;">
+              <div class="card-body">
+                <div class="d-flex align-items-center ">
+                  <div>
+                    <img class="img-fluid" src="./images/comma.png" alt="">
+                  </div>
+                <div class="" style="padding-left:14rem">
+                  <i class="text-warning h6  fa-solid fa-star"></i>
+                  <i class="text-warning h6  fa-solid fa-star"></i>
+                  <i class="text-warning h6  fa-solid fa-star"></i>
+                  <i class="text-warning h6  fa-solid fa-star"></i>
+                  <i class="text-warning h6  fa-solid fa-star-half-stroke"></i>
+                </div>
+                </div>
+                <p class="text-secondary mt-3"><small>There are many variations of passages of Lorem Ipsum available, but
+                  the majority have suffered alteration in some form, by injected
+                  humour, or randomised words which don't look even slightly
+                  believable. If you are going to use a passage of Lorem.</small></p>
+                  <div class="d-flex">
+                    <img class="img-fluid p-3 h-25" src="./images/student/student-6.png" alt="">
+                   <div>
+                    <h5>Shanta Shodan</h5>
+                    <p class="text-secondary">Graphic Designer</p>
+                   </div>
+                  </div>
+               
+              </div>
+            </div>
+
+
+          </section>
+          <!--end Feedback-Section -->
+
+
           <!--Start Accordion question-answer section -->
           <section class="container">
             <div class="text-center mt-5">
