--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>e-Tech learning</title>
+    <title>e-Teaching platform</title>
     <!-- start font awesome icon link -->
     <script src="https://kit.fontawesome.com/3e69ea6516.js" crossorigin="anonymous"></script>
     <!-- end font awesome icon link -->
@@ -408,12 +408,15 @@
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Accordion Item #1
+                    What is the difference between flexbox and grid ?
                   </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    <p> <span class="text-info">Differnce:</span> <br>1. Grid is made for two-dimensional layout while Flexbox is for one. This means Flexbox can work on either row or columns at a time, but Grids can work on both. <br> <br>
+                     2. Flexbox, gives you more flexibility while working on either element (row or column). HTML markup and CSS will be easy to manage in this type of scenario. <br> <br>
+                     3. GRID gives you more flexibility to move around the blocks irrespective of your HTML <br> <br> 4. Flex Direction allows developers to align elements vertically or horizontally, which is used when developers create and reverse rows or columns. <br> <br>
+                    5. CSS Grid deploys fractional measure units for grid fluidity and auto-keyword functionality to automatically adjust columns or rows.</p>
                   </div>
                 </div>
               </div>
@@ -421,12 +424,17 @@
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingTwo">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Accordion Item #2
+                    What is the difference between bootstrap and tailwind css framework ?
                   </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                   <p><span class="text-info">Difference:</span> <br>
+                   1. Tailwind offers predesigned widgets to build a site from scratch with fast UI. <br> Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a definite UI kit. <br><br>
+                   2. Tailwind CSS uses a set of utility classes to create a neat UI with more flexibility and uniqueness. <br> Otherhand,	Sites created using Bootstrap follow the generic pattern that makes them look identical. <br><br>
+                   3. Websites created using Tailwind CSS are much more customizable. <br>	Websites created with Bootstraps are known for their responsiveness and flawless design, but the looks are generic and similar. <br><br>
+                   4. Tailwind CSS is used by BlaBlaCar, Exyplis, and Bazzite. <br>	Spotify, Twitter, and Lyft are some of the famous companies that use Bootstrap.
+                                              </p>
                   </div>
                 </div>
               </div>
@@ -434,24 +442,57 @@
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingThree">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Accordion Item #3
+                    What is Css Box Model?
                   </button>
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    <p><span class="text-info">Css Box Model:</span>
+                      The CSS box model is a container that contains multiple properties including borders, margin, padding, and the content itself. It is used to create the design and layout of web pages. It can be used as a toolkit for customizing the layout of different elements. The web browser renders every element as a rectangular box according to the CSS box model. Box-Model has multiple properties in CSS. Some of them are given below: <br><br>
+
+   1. ontent: This property is used to displays the text, images, etc, that can be sized using the width & height property. <br>
+   2. padding: This property is used to create space around the element, inside any defined border. <br>
+    3. border: This property is used to cover the content & any padding, & also allows to set the style, color, and width of the border. <br>
+    4. margin: This property is used to create space around the element ie., around the border area.
+
+                    </p>
                   </div>
                 </div>
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingThree">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Accordion Item #4
+                    What is Semantic Tag ?
                   </button>
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  <p><span class="text-info">Semanatic Tag:</span>
+                   HTML tags are classified in two types. <br><br> 
+                  1. Semantic <br>
+                  2. Non-Semantic <br><br>
+                  <span class="text-info"> Semantic Elements:</span> Semantic elements have meaningful names which tells about type of content. For example header, footer, table, … etc. HTML5 introduces many semantic elements as mentioned below which make the code easier to write and understand for the developer as well as instructs the browser on how to treat them. <br> <br> 
+                                                        
+                  1. article
+                  2. aside
+                  3. details
+                  4. figcaption
+                  5. figure
+                  6. footer
+                  7. header
+                  8. main
+                  9. mark
+                  10. nav
+                  11. section
+
+
+
+
+
+
+
+
+                  </p>
                   </div>
                 </div>
               </div>
@@ -507,7 +548,7 @@
     <footer class="bg-dark p-4">
 
       <div class="text-center">
-        <h3 class="text-white mt-4 fw-bold">Effect Edu</h3>
+        <h3 class="text-white mt-4 fw-bold">e -Teaching platform</h3>
         <p class="text-white"><small>Office 51, Gonobhobon, College Gate Dhaka. <br> Capital of Dhaka</small></p>
         <p class="mb-3 text-white"><small>Privacy Policy | Terms of Use</small></p>
       </div>
